--- a/src/app/dashboard-page/dashboard-pages/finance-page/components/user-finances/user-finances.component.scss
+++ b/src/app/dashboard-page/dashboard-pages/finance-page/components/user-finances/user-finances.component.scss
@@ -312,6 +312,25 @@
         .operation-type {
             height: 50px;
         }
+        .card-number {
+          input {
+
+            background: #f4f7fc;
+            border: 1px solid rgba(220, 224, 230, 0.1);
+            border-radius: 3px;
+            height: 43px;
+            outline: none;
+            font-family: Source Sans Pro, sans-serif;
+            font-style: normal;
+            font-weight: normal;
+            font-size: 18px;
+            line-height: 23px;
+            color: #323c47;
+            width: 100%;
+            padding: 0 15px;
+            box-sizing: border-box;
+          }
+        }
         .cash-form {
             p {
                 margin: 0;
