photo type validation

--- a/src/app/dashboard-page/dashboard-pages/user-settings-dashboard/components/general-user-settings/additional-education-user-settings/additional-education-user-settings.component.html
+++ b/src/app/dashboard-page/dashboard-pages/user-settings-dashboard/components/general-user-settings/additional-education-user-settings/additional-education-user-settings.component.html
@@ -104,6 +104,7 @@
               <input type="file" id="additionalDiplomaFiles-{{i}}" class="input-file" #file name="file"
                 (change)="fileProgress($event.target.files, userSettings.additionalEducation[i].id, i)" />
               <label for="additionalDiplomaFiles-{{i}}">{{'user-settings.onload-diploma' | translate}}</label>
+              <p class="format-files">Возможные форматы файлов jpg, jpeg, png</p>
             </div>
 
             <button type="button" class="delete-education">
