--- a/src/app/dashboard-page/dashboard-pages/user-settings-dashboard/components/general-user-settings/additional-education-user-settings/additional-education-user-settings.component.scss
+++ b/src/app/dashboard-page/dashboard-pages/user-settings-dashboard/components/general-user-settings/additional-education-user-settings/additional-education-user-settings.component.scss
@@ -202,6 +202,15 @@
     }
   }
 }
+.format-files{
+    font-size: 16px;
+    line-height: 20px;
+    color: #323C47;
+    margin: 0;
+    font-family: 'Source Sans Pro', sans-serif;
+    margin-bottom: 15px;
+    width: 100%;
+}
 
 .add-education{
   color: #3C7EEA;
