--- a/src/app/dashboard-page/dashboard-pages/user-settings-dashboard/components/general-user-settings/education-user-settings/education-user-settings.component.scss
+++ b/src/app/dashboard-page/dashboard-pages/user-settings-dashboard/components/general-user-settings/education-user-settings/education-user-settings.component.scss
@@ -282,6 +282,15 @@ button {
     }
   }
 }
+.format-files{
+    font-size: 16px;
+    line-height: 20px;
+    color: #323C47;
+    margin: 0;
+    font-family: 'Source Sans Pro', sans-serif;
+    margin-bottom: 15px;
+    width: 100%;
+}
 
 // ---------------------------file upload form ---------------------------
 .items {
