--- a/src/app/dashboard-page/dashboard-pages/finance-page/components/user-finances/user-finances.component.html
+++ b/src/app/dashboard-page/dashboard-pages/finance-page/components/user-finances/user-finances.component.html
@@ -78,7 +78,7 @@
                   <div class="card-number-wrap">
                     <p>{{'dashboard.cash-box.card-number-placeholder' | translate}}</p>
                     <div>
-                        <input name="creditCard" matInput mask="0000 0000 0000 0000"  require maxlength=19 minlength=19 [(ngModel)]="transactions.creditCard" id="creditCard" type="text">
+                        <input name="creditCard" matInput mask="0000 0000 0000 0000"  require  [(ngModel)]="transactions.creditCard" id="creditCard-laptop" type="text">
                     </div>
 
                 </div>
@@ -128,7 +128,7 @@
                   <div class="card-number-wrap">
                     <p>{{'dashboard.cash-box.card-number-placeholder' | translate}}</p>
                     <div>
-                        <input name="creditCard" matInput mask="0000 0000 0000 0000"  require maxlength=19 minlength=19 [(ngModel)]="transactions.creditCard" id="creditCard" type="text">
+                        <input name="creditCard" matInput mask="0000 0000 0000 0000"  require [(ngModel)]="transactions.creditCard" id="creditCard" type="text">
                     </div>
 
                 </div>
